<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@+id/tvTyphoonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/text_color3"
        android:textSize="@dimen/level_5"/>

    <ImageView
        android:id="@+id/ivList"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@+id/ivRange"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/shawn_icon_list"/>

    <ImageView
        android:layout_above="@+id/ivLegend"
        android:id="@+id/ivRange"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/shawn_icon_range"/>

    <ImageView
        android:id="@+id/ivLegend"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/shawn_icon_legend"/>

    <RelativeLayout
        android:clickable="true"
        android:id="@+id/reTyphoonList"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:background="@drawable/shawn_bg_corner_typhoon_list">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCurrent"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:background="@drawable/shawn_bg_current_press"
                android:gravity="center"
                android:text="当前台风"
                android:textColor="@color/white"
                android:textSize="@dimen/level_4"/>

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:background="@drawable/shawn_bg_history"
                android:gravity="center"
                android:text="历史台风"
                android:textColor="@color/text_color3"
                android:textSize="@dimen/level_4"/>

        </LinearLayout>

        <ListView
            android:id="@+id/startListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:cacheColorHint="@color/transparent"
            android:divider="@null"
            android:listSelector="@color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none"/>

        <ListView
            android:id="@+id/yearListView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:cacheColorHint="@color/transparent"
            android:divider="@null"
            android:listSelector="@color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/nameListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:layout_toEndOf="@+id/yearListView"
            android:cacheColorHint="@color/transparent"
            android:divider="@null"
            android:listSelector="@color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/ivTyphoonClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:src="@drawable/shawn_icon_close"/>
    </RelativeLayout>

    <RelativeLayout
        android:clickable="true"
        android:id="@+id/reLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:background="@drawable/shawn_bg_corner_typhoon_list" >

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_level1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_level1"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_level2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_level2"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_level3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_level3"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_level4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_level4"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_level5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_level5"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_level6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_level6"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_circle7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="七级风圈"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_circle10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="十级风圈"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/typhoon_influnce"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/typhoon_influnce"
                        android:textColor="@color/text_color3"
                        android:textSize="@dimen/level_5"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivLegendClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/shawn_icon_close" />
    </RelativeLayout>

</RelativeLayout>